--- a/ColorNumber/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Storyboard/Base.lproj/Main.storyboard
@@ -18,64 +18,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0_start_screen" translatesAutoresizingMaskIntoConstraints="NO" id="lR9-3o-93G">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GLT-kx-rJO">
-                                <rect key="frame" x="62.5" y="167" width="250" height="333.5"/>
-                            </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XiZ-nx-MTj">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="60.5" width="375" height="556.5"/>
                             </scrollView>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="vgf-Ys-bMr">
-                                <rect key="frame" x="160" y="510.5" width="55" height="37"/>
-                            </pageControl>
-                            <button hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Gy-ms-4a4">
-                                <rect key="frame" x="94" y="557.5" width="187.5" height="34"/>
-                                <color key="backgroundColor" red="0.93027269840000004" green="0.2777306437" blue="0.24826529620000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Continue"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="continueAction:" destination="fLo-0g-PRq" eventType="touchUpInside" id="Y6D-kQ-Cza"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AV7-Q4-LVW">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PcB-or-J9M">
+                                        <rect key="frame" x="10" y="18" width="14" height="25"/>
+                                        <state key="normal" image="ic_back"/>
+                                        <connections>
+                                            <action selector="continueAction:" destination="fLo-0g-PRq" eventType="touchUpInside" id="FV3-eB-CSR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="PcB-or-J9M" firstAttribute="leading" secondItem="AV7-Q4-LVW" secondAttribute="leading" constant="10" id="8ll-iR-6Jn"/>
+                                    <constraint firstItem="PcB-or-J9M" firstAttribute="centerY" secondItem="AV7-Q4-LVW" secondAttribute="centerY" id="WeW-n6-6gr"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="lR9-3o-93G" firstAttribute="leading" secondItem="a0J-S7-qDe" secondAttribute="leading" id="0Tz-KH-AJx"/>
-                            <constraint firstItem="a0J-S7-qDe" firstAttribute="bottom" secondItem="XiZ-nx-MTj" secondAttribute="bottom" id="5Lv-Hr-q8L"/>
+                            <constraint firstItem="XiZ-nx-MTj" firstAttribute="top" secondItem="AV7-Q4-LVW" secondAttribute="bottom" id="1J6-Xr-Onf"/>
+                            <constraint firstItem="a0J-S7-qDe" firstAttribute="bottom" secondItem="XiZ-nx-MTj" secondAttribute="bottom" constant="50" id="5Lv-Hr-q8L"/>
+                            <constraint firstItem="AV7-Q4-LVW" firstAttribute="height" secondItem="vZs-4k-mbN" secondAttribute="height" multiplier="1/11" id="6Jb-MQ-nu8"/>
                             <constraint firstItem="XiZ-nx-MTj" firstAttribute="leading" secondItem="a0J-S7-qDe" secondAttribute="leading" id="DgV-xS-i6J"/>
-                            <constraint firstItem="a0J-S7-qDe" firstAttribute="trailing" secondItem="lR9-3o-93G" secondAttribute="trailing" id="G4y-L9-Pui"/>
-                            <constraint firstItem="XiZ-nx-MTj" firstAttribute="top" secondItem="a0J-S7-qDe" secondAttribute="top" id="GJb-CV-Us4"/>
-                            <constraint firstItem="GLT-kx-rJO" firstAttribute="height" secondItem="vZs-4k-mbN" secondAttribute="height" multiplier="1/2" id="ImD-Gk-XLV"/>
-                            <constraint firstItem="vgf-Ys-bMr" firstAttribute="centerX" secondItem="a0J-S7-qDe" secondAttribute="centerX" id="Jhg-9u-DZp"/>
-                            <constraint firstItem="GLT-kx-rJO" firstAttribute="width" secondItem="vZs-4k-mbN" secondAttribute="width" multiplier="2/3" id="M71-3W-bK0"/>
-                            <constraint firstItem="lR9-3o-93G" firstAttribute="top" secondItem="a0J-S7-qDe" secondAttribute="top" id="Odd-O9-bqK"/>
-                            <constraint firstItem="2Gy-ms-4a4" firstAttribute="top" secondItem="vgf-Ys-bMr" secondAttribute="bottom" constant="10" id="P94-fC-vVs"/>
-                            <constraint firstItem="GLT-kx-rJO" firstAttribute="centerY" secondItem="vZs-4k-mbN" secondAttribute="centerY" id="Sl4-Xc-Yqc"/>
-                            <constraint firstItem="GLT-kx-rJO" firstAttribute="centerX" secondItem="a0J-S7-qDe" secondAttribute="centerX" id="cbv-5Y-qfh"/>
-                            <constraint firstItem="vgf-Ys-bMr" firstAttribute="top" secondItem="GLT-kx-rJO" secondAttribute="bottom" constant="10" id="dJY-0e-ynh"/>
+                            <constraint firstItem="a0J-S7-qDe" firstAttribute="trailing" secondItem="AV7-Q4-LVW" secondAttribute="trailing" id="OdP-md-MKO"/>
+                            <constraint firstItem="AV7-Q4-LVW" firstAttribute="top" secondItem="vZs-4k-mbN" secondAttribute="top" id="PcC-G8-cSt"/>
+                            <constraint firstItem="AV7-Q4-LVW" firstAttribute="leading" secondItem="vZs-4k-mbN" secondAttribute="leading" id="Sry-Qm-BaT"/>
                             <constraint firstItem="a0J-S7-qDe" firstAttribute="trailing" secondItem="XiZ-nx-MTj" secondAttribute="trailing" id="mfZ-NQ-sZf"/>
-                            <constraint firstItem="a0J-S7-qDe" firstAttribute="bottom" secondItem="lR9-3o-93G" secondAttribute="bottom" id="oF1-Sj-XvJ"/>
-                            <constraint firstItem="2Gy-ms-4a4" firstAttribute="width" secondItem="vZs-4k-mbN" secondAttribute="width" multiplier="1/2" id="xaH-wH-9Lt"/>
-                            <constraint firstItem="2Gy-ms-4a4" firstAttribute="centerX" secondItem="a0J-S7-qDe" secondAttribute="centerX" id="z05-dH-GTN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="a0J-S7-qDe"/>
                     </view>
                     <connections>
-                        <outlet property="btnContinue" destination="2Gy-ms-4a4" id="KXC-Hf-yLU"/>
-                        <outlet property="imageTutorial" destination="GLT-kx-rJO" id="39p-4l-oJ8"/>
-                        <outlet property="pageControl" destination="vgf-Ys-bMr" id="YNZ-Ge-pOG"/>
                         <outlet property="scrollView" destination="XiZ-nx-MTj" id="EGR-sS-edL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZwL-OS-eZ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-116" y="-294"/>
+            <point key="canvasLocation" x="-116" y="-294.60269865067471"/>
         </scene>
         <!--Custom Tabbar Controller-->
         <scene sceneID="WuR-ip-eCO">
@@ -144,7 +127,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="0_start_screen" width="414" height="736"/>
+        <image name="ic_back" width="14" height="25"/>
         <image name="ic_libary" width="414" height="48"/>
         <image name="ic_mygallarydark" width="27" height="27"/>
     </resources>
